# SkillBox

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-main.yml  release.yml
scripts/: set-version.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/src/: figma.rs  main.rs
src/components/: AnimatedNumber.tsx  AppBrandIcon.tsx  ApplicationCard.tsx  CodexSkillGlyph.tsx  FigmaSkillIcon.tsx  GitPanel.tsx  LogoGlyph.tsx  MarketSkillDetailModal.tsx  Modal.tsx  SkillItem.tsx  ThemeToggle.tsx  ToastProvider.tsx
src/lib/: i18n-context.tsx  i18n.ts  preferences.ts  tauri.ts  theme.ts
src/pages/: DashboardPage.tsx  SettingsPage.tsx
src/styles/: main.css
