[package]
name = "skillbox"
version = "2026.3.24"
description = "A cross-platform skill management tool"
authors = ["SkillBox"]
license = "MIT"
repository = "https://github.com/justwe-bot/SkillBox"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
sha2 = "0.10"
walkdir = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
